# gltest

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  Makefile  Makefile.new  TASKS.txt
lib/msvc/: glm.lib
shaders/: vertex.glsl
src/: Camera.h  Designer.cpp  Designer.h  Scene.h  TwglWidget.cpp  TwglWidget.h  main.cpp  widget.cpp  widget.h
src/geometry/: Cube.h  Material.h  Mesh.h  Object.h  Texture.h  Vertex.h
src/shaders/: Shaders.h  fragment.glsl  geometry.glsl  vertex.glsl
src/widgets/: TwglWidget.cpp  TwglWidget.h
